--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@angular/forms": "2.4.10",
     "@angular/platform-browser": "2.4.10",
     "@angular/platform-browser-dynamic": "2.4.10",
+    "bootstrap": "4.0.0-beta.2",
     "core-js": "2.5.1",
     "reflect-metadata": "0.1.10",
     "rxjs": "5.4.3",
@@ -46,8 +47,6 @@
     "raw-loader": "0.5.1",
     "sass-loader": "6.0.6",
     "style-loader": "0.19.0",
-    "tslint": "^5.8.0",
-    "tslint-loader": "^3.5.3",
     "typescript": "2.6.1",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
